# AI-Voice-chat

./: CMakeLists.txt  README.md  STT.cpp  TTS.cpp  begin.cpp  begin.h  main.cpp  question.md
VoiceChatSystemGUI/src/UI/: MainInterface.form  MainInterface.java
py/: STT.py  TTS.py
python_flask_html.js/: STT.py  app.py  audio.txt  index.html
python_flask_html.js/templates/: index.html
try/: attempt.cpp
